IntershipFirstProject/force-app/main/default/objects/Commodity__c/fields/Cart_commodity__c.field-meta.xml
<CustomField>
    <fullName>Cart_commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart commodity</label>
    <referenceTo>Cart2__c</referenceTo>
    <relationshipLabel>Commodities</relationshipLabel>
    <relationshipName>Commodities</relationshipName>
    <type>Lookup</type>
</CustomField>