IntershipFirstProject/force-app/main/default/objects/Commodity__c/fields/Commodity_price__c.field-meta.xml
<CustomField>
    <fullName>Commodity_price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commodity price</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>