IntershipFirstProject/force-app/main/default/objects/Commodity__c/fields/Commodity_quantity__c.field-meta.xml
<CustomField>
    <fullName>Commodity_quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commodity quantity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>